force-app/main/default/objects/Eligibility_Condition__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <label>Eligibility Criteria</label>
    <referenceTo>Eligibility_Criteria__c</referenceTo>
    <relationshipLabel>Eligibility Conditions</relationshipLabel>
    <relationshipName>Eligibility_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>