force-app/main/default/objects/Eligibility_Condition__c/fields/Logical_Operator__c.field-meta.xml
<CustomField>
    <fullName>Logical_Operator__c</fullName>
    <label>Logical Operator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>