force-app/main/default/objects/Eligibility_Condition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Eligibility_Criteria__c</columns>
    <columns>Sequence__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <columns>Logical_Operator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>